--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-requests
-streamlit
-streamlit-lottie
-Pyrebase
+requests==2.26.0
+streamlit==1.1.0
+streamlit-lottie==0.0.2
+Pyrebase==3.0.27
 seleniumbase
 hashlib
