--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,11 @@ requests
 streamlit==1.1.0
 streamlit-lottie==0.0.2
 Pyrebase==3.0.27
+pytest==6.2.5
+pytest-forked==1.3.0
+pytest-html==2.0.1
+pytest-metadata==1.11.0
+pytest-ordering==0.6
+pytest-rerunfailures==10.2
+pytest-xdist==2.4.0
+seleniumbase
