--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 setuptools>=59.3.0
 streamlit
 selenium>3.5.0
-webdriver_manager
+webdriver-manager
 html-to-json
 beautifulsoup4==4.10.0
 jsonschema==2.6.0
 requests
 streamlit-lottie==0.0.2
-Pyrebase==3.0.27
+firebase-admin
