--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 setuptools>=59.3.0
 streamlit
 selenium>3.5.0
-webdriver-manager
+webdriver-manager==3.5.2
 beautifulsoup4==4.10.0
 jsonschema==2.6.0
 requests
