--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 setuptools>=59.3.0
 streamlit
-selenium>3.5.0
+selenium>=3.141.0
 webdriver-manager==3.5.2
 beautifulsoup4==4.10.0
 jsonschema==2.6.0
