--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-setuptools>=59.3.0
-streamlit
-selenium>=3.141.0
+setuptools==59.3.0
+streamlit==1.2.0
+selenium==3.141.0
 webdriver-manager==3.5.2
 beautifulsoup4==4.10.0
 jsonschema==2.6.0
-requests
+requests==2.26.0
 streamlit-lottie==0.0.2
-firebase-admin
+firebase-admin==5.0.3
 Pyrebase==3.0.27
