--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ selenium==3.141.0
 webdriver-manager==3.5.2
 beautifulsoup4==4.10.0
 jsonschema==2.6.0
-requests==2.26.0
+requests
 streamlit-lottie==0.0.2
 firebase-admin==5.0.3
 Pyrebase==3.0.27
