--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-setuptools==59.3.0
-streamlit==1.2.0
-selenium==3.141.0
-webdriver-manager==3.5.2
+setuptools>=59.3.0
+streamlit
+selenium
+webdriver-manager
 beautifulsoup4==4.10.0
 jsonschema==2.6.0
 streamlit-lottie==0.0.2
-firebase-admin==5.0.3
+firebase-admin
 Pyrebase==3.0.27
