--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 setuptools>=59.3.0
-streamlit
+streamlit>=1.0.0
 selenium
-webdriver-manager
+webdriver-manager>=3.0.0
 beautifulsoup4==4.10.0
 jsonschema==2.6.0
 streamlit-lottie==0.0.2
