--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-setuptools>=59.3.0
-streamlit>=1.0.0
-selenium>3.0.0
-webdriver-manager>=3.0.0
+streamlit
+selenium>3.5.0
+webdriver_manager
+html-to-json
 beautifulsoup4==4.10.0
 jsonschema==2.6.0
+setuptools>=59.3.0
 streamlit-lottie==0.0.2
 firebase-admin
 Pyrebase==3.0.27
