--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+streamlit==1.2.0
 selenium>3.5.0
 webdriver_manager
 beautifulsoup4==4.10.0
@@ -6,4 +6,6 @@ jsonschema==2.6.0
 setuptools>=59.3.0
 streamlit-lottie==0.0.2
 firebase-admin
-networkx
+networkx==2.5
+pyvis==0.1.8.2
+pyvis-network==0.0.2
