--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-﻿streamlit==1.2.0
+﻿streamlit
 selenium>3.5.0
 webdriver_manager
 beautifulsoup4==4.10.0
 jsonschema==2.6.0
 setuptools>=59.3.0
-streamlit-lottie==0.0.2
+streamlit-lottie
 firebase-admin
 networkx==2.5
 pyvis==0.1.8.2
