--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 ﻿streamlit
-selenium>3.5.0
+selenium
 webdriver_manager
-beautifulsoup4==4.10.0
-jsonschema==2.6.0
-setuptools>=59.3.0
+beautifulsoup4
+jsonschema
+setuptools
 streamlit-lottie
 firebase-admin
-networkx==2.5
-pyvis==0.1.8.2
-protobuf<=3.20.1
+networkx
+pyvis
